# inventory-management

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.html  CLAUDE.md  LEARNINGS.md  README.md  architecture.html  install.sh  news-20260624.md
.claude/: mcp-config.json  settings.json  settings.local.json
.claude/agents/: debugger.md  vue-expert.md
.claude/commands/: frontend-redesign.md  redesign-ui.md  saas-redesign.md  sidebar-redesign.md  start.md  stop.md
.claude/hooks/: session-start.sh
.claude/skills/frontend-redesign/: SKILL.md
.github/workflows/: claude-code-review.yml  claude.yml
client/: .npmrc  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
client/src/: App.vue  api.js  index.css  main.js  router.js
client/src/locales/: en.js  (+2 more)
docs/: architecture.html
scripts/: start.sh  stop.sh
server/: CLAUDE.md  main.py  mock_data.py  pyproject.toml
server/data/: demand_forecasts.json  inventory.json
tasks/: audit-action-plan.md  performance-findings.md  security-findings.md  tier1-team-tasks.md  ux-findings.md
tests/: pytest.ini  sidebar_test.mjs
tests/backend/: conftest.py  test_dashboard.py  test_inventory.py  test_misc_endpoints.py  test_orders.py  test_reports.py  test_restock.py  test_restock_orders.py  test_restocking.py  test_submitted_orders.py  test_tasks.py  test_tasks_and_purchase_orders.py
tests/e2e/: README.md  navigation.spec.js  package.json  playwright.config.js
tests/frontend/: restocking-logic.test.js  useFilters.test.js  useI18n.test.js
(+67 files in other folders)
